# pythaw

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  playground-check.yml  publish.yml
docs/: ph2_todo.md  spec.md
docs/adr/: 0001-architecture.md
pythaw/: __init__.py  __main__.py  checker.py  cli.py  config.py  finder.py  lsp.py  rendering.py  resolver.py  violation.py
pythaw/formatters/: __init__.py  _base.py  concise.py  github.py  json.py  sarif.py
pythaw/rules/: __init__.py  _base.py  pw001.py  pw002.py  pw003.py  pw004.py  pw005.py  pw006.py  pw007.py  pw008.py  pw009.py
tests/: test_checker.py  test_cli.py  test_config.py  test_finder.py  test_formatters.py  test_init.py  test_rendering.py  test_rules.py  test_server.py  test_violation.py
tests/e2e/: test_e2e.py
tests/e2e/fixtures/async_handler/: app.py
tests/e2e/fixtures/custom_patterns/: app.py  pyproject.toml
tests/e2e/fixtures/exclude_dir/: pyproject.toml
tests/e2e/fixtures/invalid_config_value/: app.py  pyproject.toml
tests/e2e/fixtures/multi_handler/: multi.py
tests/e2e/fixtures/multi_violation/: a.py
tests/e2e/fixtures/nested_call/: app.py
tests/e2e/fixtures/violation/: app.py
tests/e2e/scenarios/clean/: app.py
tests/e2e/scenarios/custom_patterns_no_default/: app.py
tests/e2e/scenarios/invalid_toml/: pyproject.toml
tests/e2e/scenarios/multi_violation/: b.py
tests/e2e/scenarios/non_handler/: util.py
tests/fixtures/rules/: PW001.py  PW007.py  PW008.py  PW009.py
tests/scenarios/rules/: PW002.py  PW003.py  PW004.py  PW005.py  PW006.py
